--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,16 @@
-body{
+body {
     background-color: gray;
 }
-#input{
+#input {
     width:25px;
+}
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
 }
